--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <a href="#home">Home</a>
             <a href="#educate">Educate</a>
             <a href="#locations">Locations</a>
-            <a href="#pros">Professionals</a>
             <a href="#faqs">FAQ's</a>
             <a href="#abouta">About Author</a>
             <a href="#aboutd">About Developer</a>
@@ -33,11 +32,7 @@
 
         <div class="info-box">
             <h1><span>Welcome!</span></h1>
-            <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+            <p>Ask Bella for a Note for the welcome section of the page!
             </p>
         </div>
     </section>
@@ -50,99 +45,127 @@
             <div class="box">
                 <h1><span>Eddie Eagle</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>The Eddie Eagle GunSafe® program is a gun accident 
+                   prevention program that seeks to help parents, law 
+                   enforcement, community groups and educators navigate 
+                   a topic paramount to our children’s safety. Eddie 
+                   and his Wing Team are on a mission to help you teach 
+                   Pre-K through 4th graders what to do if they ever come 
+                   across a gun… “Stop. Don’t Touch. Run Away. Tell a 
+                   Grown-Up.”
                 </p>
             </div>
 
             <div class="box">
                 <h1><span>Hunter Education</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>NRA Hunter Education’s award-winning and 100% free 
+                   online course is designed to help new hunters of all 
+                   ages learn how to be safe and responsible members of 
+                   the hunting community. From the organization that 
+                   built the first-ever hunter education program in 1949, 
+                   this state-of-the-art course is the most comprehensive 
+                   online hunter education instruction in the United States. 
+                   The 15-chapter, online sequence featuring attention-grabbing 
+                   videos, eye-catching graphics, interactive modules, audio 
+                   recordings and dozens of action photos is available at 
+                   students’ fingertips, whenever and wherever they are able 
+                   to complete it.
                 </p>
             </div>
 
             <div class="box">
-                <h1><span>Law Enforcement</span></h1>
+                <h1><span>NRA Law Enforcement Division</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>Law Enforcement, Military and Security. The NRA 
+                   established a Law Enforcement Division in 1960 
+                   specifically to provide the law enforcement community 
+                   with a means to certify law enforcement firearm instructors. 
+                   We also offer law enforcement firearm competitions, as 
+                   we believe competition is a direct extension of training. 
+                   Competitions consist of the National Police Shooting 
+                   Championships as well as a new multi-gun law enforcement 
+                   competition called the Tactical Police Competition, or TPC.
                 </p>
             </div>
 
             <div class="box">
-                <h1><span>NRA Yes</span></h1>
+                <h1><span>Youth Education Summit (Y.E.S)</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>For two decades, NRA’s Youth Education Summit (Y.E.S.) has 
+                   brought of some of America’s most bright, ambitious, and 
+                   patriotic youth to our nation's capital each summer for a 
+                   week of fun they'll never forget. Students engage with 
+                   political leaders, visit historical monuments, and apply 
+                   their skills in competitive debates, all to enrich and inspire 
+                   the future of our nation. The mission of the Y.E.S. program is 
+                   to help students explore our American government, Bill of Rights 
+                   and the U.S. Constitution, while encouraging them to become 
+                   responsible citizens who participate in the democratic process 
+                   and return to their community with a proactive voice for the 
+                   Second Amendment.
                 </p>
             </div>
 
             <div class="box">
                 <h1><span>Refuse to be a Victim</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>Basic principles for crime prevention and personal safety. We 
+                   never think a crime can happen to us, until it does. While sometimes 
+                   unfortunate things do happen unexpectedly, it is important to be 
+                   equipped with the knowledge and skills for personal safety and crime 
+                   prevention.
                 </p>
             </div>
 
             <div class="box">
-                <h1><span>Safety Generic</span></h1>
+                <h1><span>Gun Safety</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
-                </p>
+                <p>The 3 cardinal rules of gun safety are:</p>
+                <ul>
+                    <li>Always keep the gun pointed in a safe direction.</li>
+                    <li>Always keep your finger off the trigger until you are ready to shoot.</li>
+                    <li>Always keep the gun unloaded until ready to use.</li>
+                </ul>
             </div>
 
             <div class="box">
                 <h1><span>School Shield</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>We Have A Singular Mission: To Protect Our Children</p>
+                <p>School security is a complex issue with no simple, single 
+                   solution. The NRA School Shield program is committed to 
+                   addressing the many facets of school security, including 
+                   best practices in security infrastructure, technology, 
+                   personnel, training, and policy. Through this multidimensional 
+                   effort, NRA School Shield seeks to engage communities and 
+                   empower leaders to help make our schools more secure.
                 </p>
             </div>
 
             <div class="box">
-                <h1><span>Texas Parks and Wildlife</span></h1>
+                <h1><span>Youth Hunter Education (YHEC)</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>NRA's Youth Hunter Education Challenge (YHEC) provides a 
+                    fun environment for kids to improve their hunting marksmanship, 
+                    and safety skills. Through its simulated hunting situations, 
+                    live fire exercises, educational and responsibility events, YHEC 
+                    helps build upon skills learned in basic hunter education courses 
+                    and encourages safer, lifelong hunting habits. From rifle, bow, 
+                    and muzzleloader shooting at life-sized targets, to wildlife 
+                    identification, map and compass orienteering, and more, YHEC 
+                    participants can get hands-on training in eight skill areas, giving 
+                    them expertise in all methods of take and all types of game.
                 </p>
             </div>
 
             <div class="box">
                 <h1><span>Women on Target</span></h1>
 
-                <p>Description Lorem ipsim dolor sit amet consectetur,
-                adipisicing elit. Debitis omnuus natus recusandae!
-                Maiores numquam repellat quisquam cum nulla minus
-                minima fuga impedit ullam distinctio. Vel blanditiis
-                dicta commodi in cum.
+                <p>Women on target is the perfect place to start. 
+                   If you’re curious about firearms whether for personal 
+                   defense or to learn a new sport, Women On Target is 
+                   the perfect place to start.
                 </p>
             </div>
         </div>
@@ -163,7 +186,7 @@
         <div class="pro-container">
             
             <div class="pro-box">
-                <h1><span>Pro Name</span></h1>
+                <h1><span>Mario Duran</span></h1>
                 <img src="pro-name.jpg" alt="">
             </div>
 
@@ -190,11 +213,23 @@
 
         <div class="q-container">
             <div class="question-box">
-                <span>Where can I buy a gun?</span>
-                <p>You can buy a gun at any place that
-                    *gasp* sells a gun! How crazy. How 
-                    utterly unbelievable.
-                </p>
+                <span>Who can legally own or posses a gun under federal law?</span>
+                <p>Eligible Individuals:</p>
+                <ul>
+                    <li>U.S. Citizens</li>
+                    <li>U.S. Nationals who are not Citizens</li>
+                    <li>Lawful Permanant Residents ("green card" holders)</li>
+                    <li>Certain Non-Citizens (e.g., refugees, some nonimmigrant 
+                        visa holders who meet specific exceptions like sporting 
+                        or hunting purposes)</li>
+                </ul>
+                <p>https://en.wikipedia.org/wiki/Gun_law_in_the_United_States?utm_source=chatgpt.com</p>
+                <p>Age Requirements:</p>
+                <ul>
+                    <li>At least 18 years old to purchase long guns (rifles and shotguns)</li>
+                    <li>At least 21 years old to purchase handguns</li>
+                </ul>
+                <p></p>
             </div>
 
             <div class="question-box">
