--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
         </p>
     </section>
 
-    <section id="pros">
-        <h1 class="header"><span>Professionals</span></h1>
+    <section id="locations">
+        <h1 class="header"><span>Locations</span></h1>
 
-        <div class="pro-container">
+        <div class="location-container">
             
             <div class="pro-box">
                 <h1><span>Mario Duran</span></h1>
@@ -214,7 +214,6 @@
         <div class="q-container">
             <div class="question-box">
                 <span>Who can legally own or posses a gun under federal law?</span>
-                <p>Eligible Individuals:</p>
                 <ul>
                     <li>U.S. Citizens</li>
                     <li>U.S. Nationals who are not Citizens</li>
@@ -233,21 +232,26 @@
             </div>
 
             <div class="question-box">
-                <span>I have a CHL, now what?</span>
-                <p>I have zero clue. You are asking the 
-                    wrong person. I'm just the web developer
-                    I kinda wanna know what a CHL is but
-                    it's 12 am currently.
-                </p>
+                <span>How to Hunt in Texas?</span>
+                <ul>
+                    <li>Get a hunting license - Required for all hunters (residents and non-residents). Buy online at TPWD website or from licensed vendors</li>
+                    <li>Complete Hunter Education - Mandatory for anyone born on/after Sept. 2, 1971. The course is available fully online with a printable temporary certificate.</li>
+                    <li>Obtain Required Permits - APH Permit for public lands; apply for draw hunts where required. Always check unit-specific permit rules.</li>
+                    <li>Find a Plane to Hunt - Public land through the APH program or private land (with permision/lease). Over 95% of Texas is private property.</li>
+                    <li>Know the Rules - Use the TPWD Outdoor Annual and APH booklet for regulations on seasons, legal game, and area-specific requirements.</li>
+                </ul>
             </div>
 
             <div class="question-box">
-                <span>How do I keep the gun safe?</span>
-                <p>It's never safe. Keep away from childen
-                    with a lock and key and take gun safety 
-                    classes with the whole family! Be a 
-                    responsible adult that is also aware.
-                </p>
+                <span>Is it safe to have guns in the home?</span>
+                <p>Gun owner ship can become risky instead of protective if the proper steps aren't taken.
+                   Having guns in house can be safe if:</p>
+                <ul>
+                    <li>They are stored securely.</li>
+                    <li>Everyone with access is trained and responsible.</li>
+                    <li>Children are taught safety rules.</li>
+                    <li>The household has a clear plan for both security and emergencies.</li>
+                </ul>
             </div>
 
             <h2>More FAQ's</h2>
@@ -258,10 +262,7 @@
         <div class="abouta-box">
             <div class="abouta-info">
                 <h1><span>About the Author</span></h1>
-                <p>Bella's Role in the entirety of this project
-                    as she is the one with the commision and can
-                    better describe the purpose of this website
-                    and why she made it.
+                <p>
                 </p>
             </div>
 
