--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="abouta-box">
             <div class="abouta-info">
                 <h1><span>About the Author</span></h1>
-                <p>
+                <p>ADD HER LINKED PAGE!!!!!!!!!!!!!!!!!
                 </p>
             </div>
 
