more script style

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section id="educate">
-        <h1 class="header"><span>Educate</span></h1>
+        <h1 class="header"><span>Education</span></h1>
 
         <div class="education-container">
 
@@ -185,23 +185,24 @@
 
         <div class="location-container">
             
-            <div class="pro-box">
-                <h1><span>Mario Duran</span></h1>
+            <div class="location-box">
+                <h1><span>Gun Ranges</span></h1>
+                <link>
                 <img src="pro-name.jpg" alt="">
             </div>
 
-            <div class="pro-box">
-                <h1><span>Pro Name</span></h1>
+            <div class="location-box">
+                <h1><span>Gun Shops</span></h1>
                 <img src="pro-name.jpg" alt="">
             </div>
 
-            <div class="pro-box">
-                <h1><span>Pro Name</span></h1>
+            <div class="location-box">
+                <h1><span>Gun Smiths</span></h1>
                 <img src="pro-name.jpg" alt="">
             </div>
 
-            <div class="pro-box">
-                <h1><span>Pro Name</span></h1>
+            <div class="location-box">
+                <h1><span>Extra</span></h1>
                 <img src="pro-name.jpg" alt="">
             </div>
 
