--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
         <div class="info-box">
             <h1><span>Welcome!</span></h1>
-            <p>Ask Bella for a Note for the welcome section of the page!
+            <p>Welcome to Ask the Expert! We're here to help 
+                with any firearms questions you may have and 
+                provide guidance you can trust.
             </p>
         </div>
     </section>
@@ -42,28 +44,46 @@
 
             <div class="location-container">
                 
-                <div class="location-box">
-                    <h1><span>Gun Ranges</span></h1>
-                    <img src="pro-name.jpg" alt="">
-                </div>
-
-                <div class="location-box">
-                    <h1><span>Gun Shops</span></h1>
-                    <img src="pro-name.jpg" alt="">
-                </div>
-
-                <div class="location-box">
-                    <h1><span>Gun Smiths</span></h1>
-                    <img src="pro-name.jpg" alt="">
-                </div>
-
-                <div class="location-box">
-                    <h1><span>Extra</span></h1>
-                    <img src="pro-name.jpg" alt="">
-                </div>
+                <ul>
+                    <li>
+                        <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/fetXVnThmbzFrFhz9?g_st=i">Gun Ranges</a></span>
+                    </li>
+                    <li>
+                        <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/yuAvT4Z8uUg75sEE9?g_st=i">Gun Shops</a></span>
+                    </li>
+                    <li>
+                        <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/bBoKTbftXHfwWAru9?g_st=i">Gun Smiths</a>></span>
+                    </li>
+                    <li>
+                        <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/vvnJMpAckSDbg4PT6?g_st=i">Custom Work</a></span>
+                    </li>
+                    <li>
+                        <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/ZggkQD2wD7saoH2m8?g_st=i">Coaches & Classes</a></span>
+                    </li>
+                </ul>
 
             </div>
         </section>
+
+    <section id="guns">
+        <h1 class="header"><span>Types of Guns</span></h1>
+
+        <div class="guns-container">
+
+            <div class="types">
+                <ul>
+                    <li><img src="handgun.jpg" alt=""></li>
+                    <li><img src="rifles.jpg" alt=""></li> 
+                </ul>
+                <ul>
+                    <li><img src="shotguns.jpg" alt=""></li>
+                    <li><img src="submachine-machine.jpg" alt=""></li>
+                </ul>
+                <img src="specialty.jpg" alt="">
+            </div>
+
+        </div>
+    </section>
 
     <section id="educate">
         <h1 class="header"><span>Education</span></h1>
@@ -254,7 +274,16 @@
         <div class="abouta-box">
             <div class="abouta-info">
                 <h1><span>About the Author</span></h1>
-                <p>ADD HER LINKED PAGE!!!!!!!!!!!!!!!!!
+                <p>Bella was born and raised in McAllen and has been competing
+                   in shooting sports since she was 10 years old. Over the years, 
+                   she's had the privilage of winning multiple state, regional,
+                   and national championships in both pistol and rifle. In the last
+                   five years, she has become a NRA Certified Pistol Instructor and
+                   launched her own coaching business, mainly working with kids and 
+                   women. Her passion for shooting sport extend beyond competition,
+                   spending three years working in a gun shop, where she gained hands-on
+                   experience as an armorer, learning gun cleaning stippling and custom 
+                   firearm work.
                 </p>
             </div>
 
@@ -270,12 +299,14 @@
         <div class="aboutd-box">
             <div class="aboutd-info">
                 <h1><span>About the Web Developer</span></h1>
-                <p>Izzy's role was to make this website and do it
-                    while looking pretty and cohesive. More of my 
-                    work can be found at the following links. Can
-                    be commisioned for other site works in the RGV
-                    or larger companies. Currently for hire. lol 
-                    self insert. love it here.
+                <p>Izzy was born and raised in the McAllen/Edinburg area, eventually
+                   becoming a Vaquero at University of the Rio Grande Valley in Edinburg.
+                   Her studies revolve around computer science, which she has a Bachelor's
+                   in Science for, and is currently obtaining her Masters at UTRGV. With a 
+                   primary focus in Robotics and Machine Learning research, this webpage is 
+                   a recent devotion at the request of her friend Bella. While working on her
+                   thesis, she hopes to devote more time to creating webpages for her friends,
+                   as well as other RGV businesses and entrepreneurs.
                 </p>
             </div>
 
