Gun Type Photos and link alterations

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
             <div class="types">
                 <ul>
-                    <li><img src="handgun.jpg" alt=""></li>
-                    <li><img src="rifles.jpg" alt=""></li> 
+                    <li><img src="images/handguns.jpg" alt=""></li>
+                    <li><img src="images/rifles.jpg" alt=""></li> 
                 </ul>
                 <ul>
-                    <li><img src="shotguns.jpg" alt=""></li>
-                    <li><img src="submachine-machine.jpg" alt=""></li>
+                    <li><img src="images/shotguns.jpg" alt=""></li>
+                    <li><img src="images/submachine-machine.jpg" alt=""></li>
                 </ul>
-                <img src="specialty.jpg" alt="">
+                <img src="images/specialty.jpg" alt="">
             </div>
 
         </div>
