--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/yuAvT4Z8uUg75sEE9?g_st=i">Gun Shops</a></span>
                     </li>
                     <li>
-                        <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/bBoKTbftXHfwWAru9?g_st=i">Gun Smiths</a>></span>
+                        <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/bBoKTbftXHfwWAru9?g_st=i">Gun Smiths</a></span>
                     </li>
                     <li>
                         <span><i class='bx bx-chevrons-right'></i><a href="https://maps.app.goo.gl/vvnJMpAckSDbg4PT6?g_st=i">Custom Work</a></span>
