--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul class="links">
             <a href="#home">Home</a>
             <a href="#locations">Locations</a>
+            <a href="guns">Guns</a>
             <a href="#educate">Educate</a>            
             <a href="#faqs">FAQ's</a>
             <a href="#abouta">About Author</a>
@@ -270,54 +271,57 @@
         </div>
     </section>
 
-    <section id="abouta">
-        <div class="abouta-box">
-            <div class="abouta-info">
-                <h1><span>About the Author</span></h1>
-                <p>Bella was born and raised in McAllen and has been competing
-                   in shooting sports since she was 10 years old. Over the years, 
-                   she's had the privilage of winning multiple state, regional,
-                   and national championships in both pistol and rifle. In the last
-                   five years, she has become a NRA Certified Pistol Instructor and
-                   launched her own coaching business, mainly working with kids and 
-                   women. Her passion for shooting sport extend beyond competition,
-                   spending three years working in a gun shop, where she gained hands-on
-                   experience as an armorer, learning gun cleaning stippling and custom 
-                   firearm work.
-                </p>
-            </div>
+    <footer>
+        <section id="abouta">
+            <div class="abouta-box">
+                <div class="abouta-info">
+                    <h1><span>About the Author</span></h1>
+                    <p>Bella was born and raised in McAllen and has been competing
+                    in shooting sports since she was 10 years old. Over the years, 
+                    she's had the privilage of winning multiple state, regional,
+                    and national championships in both pistol and rifle. In the last
+                    five years, she has become a NRA Certified Pistol Instructor and
+                    launched her own coaching business, mainly working with kids and 
+                    women. Her passion for shooting sport extend beyond competition,
+                    spending three years working in a gun shop, where she gained hands-on
+                    experience as an armorer, learning gun cleaning stippling and custom 
+                    firearm work.
+                    </p>
+                </div>
 
-            <img src="image.jpg" alt="">
+                <img src="image.jpg" alt="">
 
-            <div class="social-icons">
-                <span><i class='bx bxl-instagram' ></i></span>
-                <span><i class = 'bx bxs-envelope' ></i></span>
+                <div class="social-icons">
+                    <span><i class='bx bxl-instagram' ></i></span>
+                    <span><i class = 'bx bxs-envelope' ></i></span>
+                </div>
             </div>
-        </div>
-    </section>
-    <section id="aboutd">
-        <div class="aboutd-box">
-            <div class="aboutd-info">
-                <h1><span>About the Web Developer</span></h1>
-                <p>Izzy was born and raised in the McAllen/Edinburg area, eventually
-                   becoming a Vaquero at University of the Rio Grande Valley in Edinburg.
-                   Her studies revolve around computer science, which she has a Bachelor's
-                   in Science for, and is currently obtaining her Masters at UTRGV. With a 
-                   primary focus in Robotics and Machine Learning research, this webpage is 
-                   a recent devotion at the request of her friend Bella. While working on her
-                   thesis, she hopes to devote more time to creating webpages for her friends,
-                   as well as other RGV businesses and entrepreneurs.
-                </p>
-            </div>
+        </section>
+        <section id="aboutd">
+            <div class="aboutd-box">
+                <div class="aboutd-info">
+                    <h1><span>About the Web Developer</span></h1>
+                    <p>Izzy was born and raised in the McAllen/Edinburg area, eventually
+                    becoming a Vaquero at University of the Rio Grande Valley in Edinburg.
+                    Her studies revolve around computer science, which she has a Bachelor's
+                    in Science for, and is currently obtaining her Masters at UTRGV. With a 
+                    primary focus in Robotics and Machine Learning research, this webpage is 
+                    a recent devotion at the request of her friend Bella. While working on her
+                    thesis, she hopes to devote more time to creating webpages for her friends,
+                    as well as other RGV businesses and entrepreneurs.
+                    </p>
+                </div>
 
-            <img src="image.jpg" alt="">
+                <img src="image.jpg" alt="">
 
-            <div class="social-icons">
-                <span><i class='bx bxl-linkedin' ></i></span>
-                <span><i class = 'bx bxl-github' ></i></span>
+                <div class="social-icons">
+                    <span><i class='bx bxl-linkedin' ></i></span>
+                    <span><i class = 'bx bxl-github' ></i></span>
+                </div>
+                
             </div>
-        </div>
-    </section>
+        </section>
+    </footer>
 
     <script src="script.js"></script>
 
