Completion of the education html and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <section id="home">
-        <img src="images/bella_showingOff.jpg" alt="">
+        <img src="images/bella.jpg" alt="">
 
         <div class="info-box">
             <h1><span>Welcome!</span></h1>
@@ -87,7 +87,7 @@
         <div class="education-container">
 
             <div class="box">
-                <h1><span>Eddie Eagle</span></h1>
+                <h1><a href="educate/eddie-eagle.html"><span>Eddie Eagle</span><a></a></h1>
 
                 <p>The Eddie Eagle GunSafe® program is a gun accident 
                    prevention program that seeks to help parents, law 
@@ -101,7 +101,7 @@
             </div>
 
             <div class="box">
-                <h1><span>Hunter Education</span></h1>
+                <h1><a href="educate/hunter-edu.html"><span>Hunter Education</span></a></h1>
 
                 <p>NRA Hunter Education’s award-winning and 100% free 
                    online course is designed to help new hunters of all 
@@ -119,7 +119,7 @@
             </div>
 
             <div class="box">
-                <h1><span>NRA Law Enforcement Division</span></h1>
+                <h1><a href="educate/nra-le.html"><span>NRA Law Enforcement Division</span></a></h1>
 
                 <p>Law Enforcement, Military and Security. The NRA 
                    established a Law Enforcement Division in 1960 
@@ -134,7 +134,7 @@
             </div>
 
             <div class="box">
-                <h1><span>Youth Education Summit (Y.E.S)</span></h1>
+                <h1><a href="educate/yes.html"><span>Youth Education Summit (Y.E.S.)</span></a></h1>
 
                 <p>For two decades, NRA’s Youth Education Summit (Y.E.S.) has 
                    brought of some of America’s most bright, ambitious, and 
@@ -152,7 +152,7 @@
             </div>
 
             <div class="box">
-                <h1><span>Refuse to be a Victim</span></h1>
+                <h1><a href="educate/refuse-tobea-victim.html"><span>Refuse to be a Victim</span></a></h1>
 
                 <p>Basic principles for crime prevention and personal safety. We 
                    never think a crime can happen to us, until it does. While sometimes 
@@ -163,7 +163,7 @@
             </div>
 
             <div class="box">
-                <h1><span>Gun Safety</span></h1>
+                <h1><a href="educate/gun-safety.html"><span>Gun Safety</span></a></h1>
 
                 <p>The 3 cardinal rules of gun safety are:</p>
                 <ul>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="box">
-                <h1><span>School Shield</span></h1>
+                <h1><a href="educate/school-shield.html"><span>School Shield</span></a></h1>
 
                 <p>We Have A Singular Mission: To Protect Our Children</p>
                 <p>School security is a complex issue with no simple, single 
@@ -188,7 +188,7 @@
             </div>
 
             <div class="box">
-                <h1><span>Youth Hunter Education (YHEC)</span></h1>
+                <h1><a href="educate/yhec.html"><span>Youth Hunter Education (Y.H.E.C.)</span></a></h1>
 
                 <p>NRA's Youth Hunter Education Challenge (YHEC) provides a 
                     fun environment for kids to improve their hunting marksmanship, 
@@ -204,7 +204,7 @@
             </div>
 
             <div class="box">
-                <h1><span>Women on Target</span></h1>
+                <h1><a href="educate/women-on-target.html"></a><span>Women on Target</span></h1>
 
                 <p>Women on target is the perfect place to start. 
                    If you’re curious about firearms whether for personal 
@@ -262,7 +262,7 @@
                 </ul>
             </div>
 
-            <h2>More FAQ's</h2>
+            <h2><a href="faq-page.html" target="blank">More FAQ's</a></h2>
         </div>
     </section>
 
@@ -284,7 +284,7 @@
                 </p>
             </div>
 
-            <img src="image.jpg" alt="">
+            <!--<img src="image.jpg" alt="">-->
 
             <div class="social-icons">
                 <span><i class='bx bxl-instagram' ></i></span>
@@ -307,7 +307,7 @@
                 </p>
             </div>
 
-            <img src="image.jpg" alt="">
+            <!--<img src="image.jpg" alt="">-->
 
             <div class="social-icons">
                 <span><i class='bx bxl-linkedin' ></i></span>
