FAQ beginning stages

--- a/faq-page.html
+++ b/faq-page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" 
     content="width=device-width, initial-scale=1.0">
-    <title>Y.H.E.C.</title>
-    <link rel="stylesheet" href="educate.css">
+    <title>FAQ's</title>
+    <link rel="stylesheet" href="faq.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -25,3 +25,103 @@
         <i class='bx bx-menu-alt-right' id="menu"></i>
 
     </nav>
+
+
+    <header>
+        <h1>Firearm Laws & Safety Guide</h1>
+    </header>
+
+    <main>
+        <!-- Section: Prohibited Persons -->
+        <section id="question-block">
+            <h2>Who Is Prohibited from Owning or Possessing a Firearm</h2>
+            <p><strong>Per Federal Law (18 U.S.C. § 922(g) & (n)):</strong></p>
+            <p>Under the Gun Control Act of 1968, it is unlawful for the following individuals to ship, transport, receive, or possess firearms or ammunition:</p>
+            <ul>
+                <li>Felons—convicted of any crime punishable by imprisonment exceeding one year</li>
+                <li>Fugitives from justice</li>
+                <li>Unlawful users of—or those addicted to—controlled substances</li>
+                <li>Individuals adjudicated as mentally defective or involuntarily committed</li>
+                <li>Illegal or unlawfully present aliens</li>
+                <li>Those dishonorably discharged from the Armed Forces</li>
+                <li>Persons who have renounced U.S. citizenship</li>
+                <li>Individuals under restraining orders (e.g., domestic violence protective orders)</li>
+                <li>Convicted of misdemeanor domestic violence</li>
+            </ul>
+            <p>Additionally, anyone under indictment for a crime punishable by more than one year cannot lawfully ship, transport, or receive a firearm—but may legally possess firearms obtained before the indictment, unless and until convicted.</p>
+            <p><a href="https://www.atf.gov/firearms/identify-prohibited-persons" target="_blank">ATF – Identify Prohibited Persons</a></p>
+            <p><a href="https://www.atf.gov/firearms/qa/are-there-persons-who-cannot-legally-receive-or-possess-firearms-andor-ammunition" target="_blank">ATF – Who Cannot Legally Recieve or Possess</a></p>
+            <p><a href="https://www.justice.gov/archives/jm/criminal-resource-manual-1117-restrictions-possession-firearms-individuals-convicted" target="_blank">ATF – Restrictions for the Convicted</a></p>
+        </section>
+
+        <!-- Section: Safe Storage -->
+        <section id="question-block">
+            <h2>How Am I Supposed to Store My Gun?</h2>
+            <p>NRA Guidelines and Recommendations:</p>
+            <ul>
+                <li>Store guns so they are not accessible to unauthorized persons.</li>
+                <li>Mechanical safeties are not a substitute for proper storage.</li>
+                <li>Use gun safes, locked cabinets, trigger locks, or cable locks.</li>
+                <li>Store ammunition in a different locked location.</li>
+                <li>Educate children using the Eddie Eagle GunSafe® program.</li>
+            </ul>
+            <p><a href="https://gunsafetyrules.nra.org" target="_blank">NRA Gun Safety Rules</a></p>
+        </section>
+
+        <!-- Section: Types of Guns -->
+        <section id="question-block">
+            <h2>What Kind of Guns Are There?</h2>
+            <ul>
+                <li><strong>Handguns:</strong> Pistols & revolvers (small, portable, self-defense).</li>
+                <li><strong>Rifles:</strong> Long guns with rifled barrels (hunting, long-range shooting).</li>
+                <li><strong>Shotguns:</strong> Fire shells or slugs, good for hunting & defense.</li>
+                <li><strong>Submachine & Machine Guns:</strong> Heavily regulated under federal law.</li>
+                <li><strong>Specialty Firearms:</strong> Derringers, muzzleloaders, short-barrel rifles, etc.</li>
+            </ul>
+        </section>
+
+        <!-- Section: Where You Can/Can’t Carry -->
+        <section id="question-block">
+            <h2>Where Can I and Can’t I Take My Gun?</h2>
+            <p><strong>Federal Law:</strong></p>
+            <ul>
+                <li>Schools (Gun-Free School Zones Act)</li>
+                <li>Federal buildings (courthouses, post offices, etc.)</li>
+                <li>Airports (past TSA security checkpoints)</li>
+            </ul>
+
+            <p><strong>Texas Law:</strong></p>
+            <ul>
+                <li>51% alcohol establishments</li>
+                <li>Polling places</li>
+                <li>Courts & correctional facilities</li>
+                <li>Sporting events, amusement parks, hospitals</li>
+                <li>Private property with 30.05, 30.06, 30.07 signs</li>
+            </ul>
+        </section>
+
+        <!-- Section: Ammo -->
+        <section id="question-block">
+            <h2>Ammo: How Much? What Kind? Where?</h2>
+            <ul>
+                <li><strong>Handguns:</strong> FMJ (practice), JHP (defense)</li>
+                <li><strong>Rifles:</strong> FMJ (training), Soft Point/defense rounds</li>
+                <li><strong>Shotguns:</strong> Birdshot (practice), Buckshot/slugs (defense/hunting)</li>
+            </ul>
+            <p>Buy locally (stores/ranges) or online (MidwayUSA, LuckyGunner, Ammunition Depot). Check state laws first!</p>
+        </section>
+
+        <!-- Section: Beginners -->
+        <section id="question-block">
+            <h2>I Have a Gun, Now What?</h2>
+            <ul>
+                <li>Learn the 4 Safety Rules</li>
+                <li>Store firearms securely</li>
+                <li>Train regularly</li>
+                <li>Understand federal & Texas laws</li>
+                <li>Make a household plan for emergencies</li>
+            </ul>
+        </section>
+    </main>
+</body>
+</html>
