--- a/faq-page.html
+++ b/faq-page.html
@@ -64,8 +64,20 @@
                 <li>Use gun safes, locked cabinets, trigger locks, or cable locks.</li>
                 <li>Store ammunition in a different locked location.</li>
                 <li>Educate children using the Eddie Eagle GunSafe® program.</li>
+                <li>Store in a cool, clean and dry area to maintain the condition of the firearm.</li>
+                <li>Firearms should be cleaned regularly and kept in good working order.</li>
+            </ul>
+            <p>Why are these rules important?</p>
+            <ul>
+                <li>Secure storage is crucial to prevent accidental shootings involving children or other unauthorized individuals. </li>
+                <li>Secure storage methods like safes make firearms less accessible to thieves. </li>
+                <li>Responsible gun ownership includes safe storage practices to protect the community. </li>
             </ul>
             <p><a href="https://gunsafetyrules.nra.org" target="_blank">NRA Gun Safety Rules</a></p>
+            <p><a href="https://www.nrafamily.org/content/5-tips-to-safely-store-your-guns/" target="_blank">5 Tips to Safely Store Your Gun</a></p>
+            <p><a href="https://www.hunter-ed.com/national/studyGuide/Storing-Your-Firearm/201099_92868/" target="_blank">Guide to Storing Your Firearm</a></p>
+            <p><a href="https://eddieeagle.nra.org/parents/#:~:text=Make%20sure%20all%20firearms%20cannot,%22pretend%22%20and%20real%20life." target="_blank">Eddie Eagle Program</a></p>
+            <p><a href="https://www.ssusa.org/content/rules-for-using-or-storing-a-gun/" target="_blank">Using and Storing a Gun</a></p>
         </section>
 
         <!-- Section: Types of Guns -->
@@ -85,7 +97,7 @@
             <h2>Where Can I and Can’t I Take My Gun?</h2>
             <p><strong>Federal Law:</strong></p>
             <ul>
-                <li>Schools (Gun-Free School Zones Act)</li>
+                <li>Schools (Gun-Free School Zones Act) </li>
                 <li>Federal buildings (courthouses, post offices, etc.)</li>
                 <li>Airports (past TSA security checkpoints)</li>
             </ul>
@@ -93,22 +105,79 @@
             <p><strong>Texas Law:</strong></p>
             <ul>
                 <li>51% alcohol establishments</li>
-                <li>Polling places</li>
-                <li>Courts & correctional facilities</li>
-                <li>Sporting events, amusement parks, hospitals</li>
+                <li>Polling places on election day</li>
+                <li>Courts & correctional facilities (prisons, jails)</li>
+                <li>School or Sporting events (unless it is part of the event and you are a participant)</li>
+                <li>Amusement parks, hospitals and nursing homes</li>
                 <li>Private property with 30.05, 30.06, 30.07 signs</li>
             </ul>
+        </section>
+
+        <!--Sharing a Gun-->
+        <section id="question-block">
+            <h2>Can We Share a Gun?</h2>
+            <p>You can share a gun with another legal gun owner in Texas if:</p>
+            <ul>
+                <li>They are not prohibited under federal law</li>
+                <li>It stays within Texas (no interstate handoffs without an FLL)</li>
+                <li>It is used for lawful purposes (hunting, range shooting, self-defense)</li>
+            </ul>
+            <p>Never load or share with someone who is prohibited, or you could be charged with "unlawful transfer of a firearm"</p>
+            <p>Additionally minors under 18 cannot possess a handgun, unless with a parental permission for lawful activities (hunting, target shooting)</p>
         </section>
 
         <!-- Section: Ammo -->
         <section id="question-block">
             <h2>Ammo: How Much? What Kind? Where?</h2>
+            <p>There is no single legal requirement, but firearm instructors and saftey organizations recommend:</p>
             <ul>
-                <li><strong>Handguns:</strong> FMJ (practice), JHP (defense)</li>
-                <li><strong>Rifles:</strong> FMJ (training), Soft Point/defense rounds</li>
-                <li><strong>Shotguns:</strong> Birdshot (practice), Buckshot/slugs (defense/hunting)</li>
+                <li><strong>Defensive Handgun (for home or personal protection):</strong></li>
+                <li>At least 50-100 Rounds of defensive ammunition (hollow-point, high-quality)</li>
+                <li>At least 200-500 round of practice (FMJ) for training and proficiency</li>
+                <li><strong>Rifles/Shotguns:</strong></li>
+                <li>Keep defensive loads (buckshot or slugs for shotguns, soft-point or defensive rounds for rifles)</li>
+                <li>Keep extra practive ammo to stay proficient.</li>
+            </ul>
+            <p>What Kind of Ammo? The right type depends on your gun.</p>
+            <ul>
+                <li><strong>Handguns:</strong></li>
+                <li>Metal Jacket (FMJ) for Practice/Training </li>
+                <li>Jacketed Hollow Point (JHP) for reliable expansion and stopping power</li>
+                <li><strong>Rifles:</strong></li>
+                <li>FMJ for training</li>
+                <li>Soft Point (SP) or specialized defense rounds for hunting/home defense.</li>
+                <li><strong>Shotguns:</strong></li>
+                <li>Birdshot (#7 1/2 or #8) for practice and clay shooting</li>
+                <li>Buckshot (00 or 000) for defense</li>
+                <li>Slugs for longer range or hunting</li>
+            </ul>
+            <p>Where can you buy ammo?</p>
+            <ul>
+                <li>Local gun stores or ranges are best for in-person guidance</li>
+                <li>Big box retailers: Academy Sports, Cabela's, Bass Pro, Walmart, etc...</li>
+                <li>Online at MidwayUSA, LuckyGunner, or Ammunition Depot</li>
             </ul>
             <p>Buy locally (stores/ranges) or online (MidwayUSA, LuckyGunner, Ammunition Depot). Check state laws first!</p>
+        </section>
+
+        <!--Husaband Gun-->
+        <section id="question-block">
+            <h2>My husband has a gun now what?</h2>
+            <p>Safe Storage at Home:</p>
+            <ul>
+                <li>Always assume the gun is loaded</li>
+                <li>Store firearms locked (gun safe, lockbox, cable lock)</li>
+                <li>Store ammunition separately from the gun</li>
+                <li>If children are in the home Teach them with Eddie Eagle: Stop, Don't Touch, Run Away, Tell an Adult</li>
+                <li>Never leave a gun unattended</li>
+            </ul>
+            <p>Learn the Four Universal Safety Rules:</p>
+            <ul>
+                <li>Treat every gun as if it's loaded.</li>
+                <li>Never point it at anything you're not willing to destroy</li>
+                <li>Keep your finder off the trigger until ready to shoot</li>
+                <li>Be sure of your target and what's beyond it</li>
+            </ul>
         </section>
 
         <!-- Section: Beginners -->
