--- a/faq-page.html
+++ b/faq-page.html
@@ -28,13 +28,13 @@
 
 
     <header>
-        <h1>Firearm Laws & Safety Guide</h1>
+        <h1><span>Firearm Laws & Safety Guide</span></h1>
     </header>
 
     <main>
         <!-- Section: Prohibited Persons -->
         <section id="question-block">
-            <h2>Who Is Prohibited from Owning or Possessing a Firearm</h2>
+            <h2><span>Who Is Prohibited from Owning or Possessing a Firearm?</span></h2>
             <p><strong>Per Federal Law (18 U.S.C. § 922(g) & (n)):</strong></p>
             <p>Under the Gun Control Act of 1968, it is unlawful for the following individuals to ship, transport, receive, or possess firearms or ammunition:</p>
             <ul>
@@ -56,7 +56,7 @@
 
         <!-- Section: Safe Storage -->
         <section id="question-block">
-            <h2>How Am I Supposed to Store My Gun?</h2>
+            <h2><span>How Am I Supposed to Store My Gun?</span></h2>
             <p>NRA Guidelines and Recommendations:</p>
             <ul>
                 <li>Store guns so they are not accessible to unauthorized persons.</li>
@@ -82,7 +82,7 @@
 
         <!-- Section: Types of Guns -->
         <section id="question-block">
-            <h2>What Kind of Guns Are There?</h2>
+            <h2><span>What Kind of Guns Are There?</span></h2>
             <ul>
                 <li><strong>Handguns:</strong> Pistols & revolvers (small, portable, self-defense).</li>
                 <li><strong>Rifles:</strong> Long guns with rifled barrels (hunting, long-range shooting).</li>
@@ -94,7 +94,7 @@
 
         <!-- Section: Where You Can/Can’t Carry -->
         <section id="question-block">
-            <h2>Where Can I and Can’t I Take My Gun?</h2>
+            <h2><span>Where Can I and Can’t I Take My Gun?</span></h2>
             <p><strong>Federal Law:</strong></p>
             <ul>
                 <li>Schools (Gun-Free School Zones Act) </li>
@@ -115,7 +115,7 @@
 
         <!--Sharing a Gun-->
         <section id="question-block">
-            <h2>Can We Share a Gun?</h2>
+            <h2><span>Can We Share a Gun?</span></h2>
             <p>You can share a gun with another legal gun owner in Texas if:</p>
             <ul>
                 <li>They are not prohibited under federal law</li>
@@ -126,9 +126,25 @@
             <p>Additionally minors under 18 cannot possess a handgun, unless with a parental permission for lawful activities (hunting, target shooting)</p>
         </section>
 
+        <!--Discounts for LEOS-->
+        <section id="question-block">
+            <h2><span>Are there any discounts for LEOs?</span></h2>
+            <p>Gun Manufacturer Discount Programs:</p>
+            <ul>
+                <li>Glock – Blue Label: discounted firearms via authorized distributors.</li>
+                <li>Smith & Wesson – American Guardians: special pricing on firearms/gear for law enforcement, military, and first responders.</li>
+                <li>Sig Sauer – OFF-DUTY: discounts on guns, suppressors, ammo, optics through participating dealers.</li>
+                <li>Beretta – American Defender: exclusive law enforcement discounts via authorized dealers.</li>
+                <li>FN America – Individual Officer Discount: special pricing for active/retired law enforcement.</li>
+                <li>IWI US – Public Service Professionals: 20% off firearms/silencers for qualified law enforcement.</li>
+                <li>Christensen Arms – 20% off MSRP on select firearms for active/retired law enforcement.</li>
+
+            </ul>
+        </section>
+
         <!-- Section: Ammo -->
         <section id="question-block">
-            <h2>Ammo: How Much? What Kind? Where?</h2>
+            <h2><span>Ammo: How Much? What Kind? Where?</span></h2>
             <p>There is no single legal requirement, but firearm instructors and saftey organizations recommend:</p>
             <ul>
                 <li><strong>Defensive Handgun (for home or personal protection):</strong></li>
@@ -160,10 +176,42 @@
             <p>Buy locally (stores/ranges) or online (MidwayUSA, LuckyGunner, Ammunition Depot). Check state laws first!</p>
         </section>
 
+        <!--Pistol Brace Laws-->
+        <section id="question-block">
+            <h2><span>What are the current laws when it comes to pistol braces?</span></h2>
+            <p>Current Status</p>
+            <ul>
+                <li>Federal law does NOT require you to register a pistol with a brace under the NFA (no tax stamp required), as long as it remains legally a pistol (not designed/made to be shouldered like a rifle)</li>
+                <li>Braces are legal to own and attach under current federal law</li>
+                <li>The underlying NFA definition of "rifle" is still undetermined, so if ATF argues a brace is being used as a stock, it could raise issues</li>
+            </ul>
+        </section>
+
+        <!--Difference between brace and stock-->
+        <section id="question-block">
+            <h2><span>What's the difference between a brace and a stock?</span></h2>
+            <p>
+                <strong>Pistol Brace:</strong> Designed to strap to the shooter's forearm, helping stabilize a 
+                large-format pistol (like an AR-style) without making it a rifle. It was originally intended for disabled
+                shooters.
+            </p>
+            <p>
+                <strong>Rifle Stock:</strong> Meant to be shouldered, which classifies the firearm as a rifle. If the barrel
+                is under 16 inches and it has a stock, it legally becomes a short-barreled rifle (SBR) under the National
+                Firearms Act (NFA), requiring registration and a tax stamp.
+            </p>
+            <p><strong>Why the difference?</strong></p>
+            <p>The distinction comes down to intended use and classification under federal law. A brace is Legal
+                on pistols because it isn't supposed to convert them into rifles, while a stock clearly does. 
+                However, the ATF has shifted its stance over time on braces, and current rules may limit or ban
+                certain brace configurations depending on how they are used.
+            </p>
+        </section>
+
         <!--Husaband Gun-->
         <section id="question-block">
-            <h2>My husband has a gun now what?</h2>
-            <p>Safe Storage at Home:</p>
+            <h2><span>My husband has a gun now what?</span></h2>
+            <p><strong>Safe Storage at Home:</strong></p>
             <ul>
                 <li>Always assume the gun is loaded</li>
                 <li>Store firearms locked (gun safe, lockbox, cable lock)</li>
@@ -171,24 +219,85 @@
                 <li>If children are in the home Teach them with Eddie Eagle: Stop, Don't Touch, Run Away, Tell an Adult</li>
                 <li>Never leave a gun unattended</li>
             </ul>
-            <p>Learn the Four Universal Safety Rules:</p>
+            <p><strong>Learn the Four Universal Safety Rules:</strong></p>
             <ul>
                 <li>Treat every gun as if it's loaded.</li>
                 <li>Never point it at anything you're not willing to destroy</li>
                 <li>Keep your finder off the trigger until ready to shoot</li>
                 <li>Be sure of your target and what's beyond it</li>
             </ul>
+            <p><strong>Training & Familiarization:</strong></p>
+            <ul>
+                <li>Both you and your husband should know how the firearm works (loading, unloading, clearing jams)</li>
+                <li>Take a beginner firearm safety or concealed carry course in your area</li>
+                <li>Practice regularly at a shooting range. Skill and confidence come from repetition</li>
+            </ul>
+            <p><strong>Legal Responsibilities</strong></p>
+            <ul>
+                <li>Know where you can and can't carry. (Federal gun-free zones and Texas specific rules and signs)</li>
+                <li>If your husband carries for self-defense, understand Texas use of force and self-defense laws</li>
+            </ul>
+            <p><strong>Family Communication:</strong></p>
+            <ul>
+                <li>Who has access to the gun</li>
+                <li>When will it be carried vs. stored</li>
+                <li>Emergency plans (e.g., home defense situations)</li>
+            </ul>
+
         </section>
 
         <!-- Section: Beginners -->
         <section id="question-block">
-            <h2>I Have a Gun, Now What?</h2>
+            <h2><span>I Have a Gun, Now What?</span></h2>
+            <p><strong>Learn the Four Universal Safety Rules:</strong></p>
             <ul>
-                <li>Learn the 4 Safety Rules</li>
-                <li>Store firearms securely</li>
-                <li>Train regularly</li>
-                <li>Understand federal & Texas laws</li>
-                <li>Make a household plan for emergencies</li>
+                <li>Treat every gun as if it's loaded.</li>
+                <li>Never point it at anything you're not willing to destroy</li>
+                <li>Keep your finder off the trigger until ready to shoot</li>
+                <li>Be sure of your target and what's beyond it</li>
+            </ul>
+            <p><Strong>Safe Storage in Your Home:</Strong></p>
+            <ul>
+                <li>Store firearms unloaded and locked (safe, lockbox, or cable lock)</li>
+                <li>Store ammunition separately</li>
+                <li>If children are in the home Teach them with Eddie Eagle: Stop, Don't Touch, Run Away, Tell an Adult</li>
+            </ul>
+            <p><strong>Know Your Gun and Ammo</strong></p>
+            <ul>
+                <li>Learn how to load, unload, and clear malfunctions safely</li>
+                <li>Practice with training/practice ammo (FMJ)</li>
+                <li>Keep some defensive ammo (JHP for handguns, buckshot/slugs for shotguns, soft-point or defensive rounds for rifles)</li>
+            </ul>
+            <p><strong>Training and Practice</strong></p>
+            <ul>
+                <li>Take a basic firearm safety or concealed carry class (many ranges offer beginner programs)</li>
+                <li>Practice regularly at a shooting range until you are comfortable</li>
+                <li>Dry-fire practice at home (with no ammo present) helps build safe habits.</li>
+            </ul>
+            <p><strong>Legal Awareness</strong></p>
+            <ul>
+                <li>Federal Restrictions</li>
+                <li>Texas Restrictions</li>
+                <li>Self Defense Laws</li>
+            </ul>
+            <p><strong>Household Communication</strong></p>
+            <ul>
+                <li>Decide who has access, where it will be stored and when it will be carried</li>
+                <li>Make a home defense plan in the case of a threat</li>
+            </ul>
+        </section>
+
+        <!--Afraid of Guns-->
+        <section id="question-block">
+            <h2><span>I'm Afraid of Guns. What Can Help?</span></h2>
+
+            <ul>
+                <li>Education reduces fear. Signing up and taking safety courses can make it less intimidating</li>
+                <li>Safe storage promotes Peace Of Mind. Keep it locked, unloaded, and separate of ammunition.</li>
+                <li>Exposure therapy at your own pace such as supervised handling of a unloaded gun to learn confidence and control</li>
+                <li>Focus on the purpose, not the fear. The gun is a safety tool, not a threat. It exists to protect you and your loved ones, like seatbelt</li>
+                <li>Emotional support and sharing your concerns with a loved one who may not realize your fear.</li>
+                <li>You don't have to love guns to be safe around them. Go slow.</li>
             </ul>
         </section>
     </main>
